test/elaboration/good/coreml_typeconstraint.mle
let (id : int -> int) = fun (x : int) -> x[]