test/elaboration/bad/coreml_app.mle
let (main : int) = (fun (x : int) -> x[]) 42 ()